--- a/c/ca/can/canonical.com.html
+++ b/c/ca/can/canonical.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the canonical.com privacy policy that was archived on 2013-05-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130530005640id_/http%3A//www.canonical.com/aboutus/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the canonical.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226033948id_/http%3A//www.canonical.com/aboutus/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -17,45 +17,45 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.canonical.com/rss.xml">
   
 <style type="text/css" media="all">
-  @import "/modules/node/node.css?s";
-  @import "/modules/system/defaults.css?s";
-  @import "/modules/system/system.css?s";
-  @import "/modules/system/system-menus.css?s";
-  @import "/modules/user/user.css?s";
-  @import "/sites/all/modules/cck/theme/content-module.css?s";
-  @import "/sites/www.canonical.com/files/active/css_injector_18.css?s";
-  @import "/sites/www.canonical.com/files/active/css_injector_19.css?s";
-  @import "/sites/www.canonical.com/files/active/css_injector_24.css?s";
-  @import "/sites/all/modules/ctools/css/ctools.css?s";
-  @import "/sites/all/modules/date/date.css?s";
-  @import "/sites/all/modules/date/date_popup/themes/datepicker.css?s";
-  @import "/sites/all/modules/date/date_popup/themes/jquery.timeentry.css?s";
-  @import "/sites/all/modules/filefield/filefield.css?s";
-  @import "/sites/all/modules/nice_menus/nice_menus.css?s";
-  @import "/sites/all/modules/nice_menus/nice_menus_default.css?s";
-  @import "/sites/all/modules/panels/css/panels.css?s";
-  @import "/sites/all/themes/ninesixty/styles/framework/reset.css?s";
-  @import "/sites/all/themes/ninesixty/styles/framework/text.css?s";
-  @import "/sites/all/themes/ninesixty/styles/framework/960.css?s";
-  @import "/sites/all/themes/ninesixty/styles/framework/debug.css?s";
-  @import "/sites/all/themes/ninesixty/styles/styles.css?s";
-  @import "/sites/all/themes/canonical10/960.css?s";
-  @import "/sites/all/themes/ucbase/search.css?s";
-  @import "/sites/all/themes/ucbase/ucbase.css?s";
-  @import "/sites/all/themes/ucbase/footer.css?s";
+  @import "/modules/node/node.css?u";
+  @import "/modules/system/defaults.css?u";
+  @import "/modules/system/system.css?u";
+  @import "/modules/system/system-menus.css?u";
+  @import "/modules/user/user.css?u";
+  @import "/sites/all/modules/cck/theme/content-module.css?u";
+  @import "/sites/www.canonical.com/files/active/css_injector_18.css?u";
+  @import "/sites/www.canonical.com/files/active/css_injector_19.css?u";
+  @import "/sites/www.canonical.com/files/active/css_injector_24.css?u";
+  @import "/sites/all/modules/ctools/css/ctools.css?u";
+  @import "/sites/all/modules/date/date.css?u";
+  @import "/sites/all/modules/date/date_popup/themes/datepicker.css?u";
+  @import "/sites/all/modules/date/date_popup/themes/jquery.timeentry.css?u";
+  @import "/sites/all/modules/filefield/filefield.css?u";
+  @import "/sites/all/modules/nice_menus/nice_menus.css?u";
+  @import "/sites/all/modules/nice_menus/nice_menus_default.css?u";
+  @import "/sites/all/modules/panels/css/panels.css?u";
+  @import "/sites/all/themes/ninesixty/styles/framework/reset.css?u";
+  @import "/sites/all/themes/ninesixty/styles/framework/text.css?u";
+  @import "/sites/all/themes/ninesixty/styles/framework/960.css?u";
+  @import "/sites/all/themes/ninesixty/styles/framework/debug.css?u";
+  @import "/sites/all/themes/ninesixty/styles/styles.css?u";
+  @import "/sites/all/themes/canonical10/960.css?u";
+  @import "/sites/all/themes/ucbase/search.css?u";
+  @import "/sites/all/themes/ucbase/ucbase.css?u";
+  @import "/sites/all/themes/ucbase/footer.css?u";
 </style>
 <style type="text/css" media="all">
-  @import "/sites/all/themes/ucbase/header.css?s";
-  @import "/sites/all/themes/ucbase/panels-common.css?s";
-  @import "/sites/all/themes/canonical10/style.css?s";
-  @import "/sites/all/themes/canonical10/carousel.css?s";
-  @import "/sites/all/themes/canonical10/case_study.css?s";
-  @import "/sites/all/themes/canonical10/content.css?s";
-  @import "/sites/all/themes/canonical10/events.css?s";
-  @import "/sites/all/themes/canonical10/structure.css?s";
-  @import "/sites/all/themes/canonical10/views.css?s";
-  @import "/sites/all/themes/canonical10/webinars.css?s";
-  @import "/sites/all/themes/canonical10/whitepapers.css?s";
+  @import "/sites/all/themes/ucbase/header.css?u";
+  @import "/sites/all/themes/ucbase/panels-common.css?u";
+  @import "/sites/all/themes/canonical10/style.css?u";
+  @import "/sites/all/themes/canonical10/carousel.css?u";
+  @import "/sites/all/themes/canonical10/case_study.css?u";
+  @import "/sites/all/themes/canonical10/content.css?u";
+  @import "/sites/all/themes/canonical10/events.css?u";
+  @import "/sites/all/themes/canonical10/structure.css?u";
+  @import "/sites/all/themes/canonical10/views.css?u";
+  @import "/sites/all/themes/canonical10/webinars.css?u";
+  @import "/sites/all/themes/canonical10/whitepapers.css?u";
 </style>
 
 
@@ -66,13 +66,13 @@
   <!--[if IE 8]>
     <style type="text/css" media="all">@import "/sites/all/themes/canonical10/fix-ie8.css";</style>    <![endif]-->
 
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/misc/jquery.js?s"></script>
-<script type="text/javascript" src="/misc/drupal.js?s"></script>
-<script type="text/javascript" src="/sites/all/modules/google_analytics/googleanalytics.js?s"></script>
-<script type="text/javascript" src="/sites/all/modules/nice_menus/nice_menus.js?s"></script>
-<script type="text/javascript" src="/sites/all/modules/panels/js/panels.js?s"></script>
-<script type="text/javascript" src="/sites/all/modules/pngfix/jquery.pngFix.js?s"></script>
-<script type="text/javascript" src="/sites/all/themes/canonical10/script.js?s"></script>
+  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/misc/jquery.js?u"></script>
+<script type="text/javascript" src="/misc/drupal.js?u"></script>
+<script type="text/javascript" src="/sites/all/modules/google_analytics/googleanalytics.js?u"></script>
+<script type="text/javascript" src="/sites/all/modules/nice_menus/nice_menus.js?u"></script>
+<script type="text/javascript" src="/sites/all/modules/panels/js/panels.js?u"></script>
+<script type="text/javascript" src="/sites/all/modules/pngfix/jquery.pngFix.js?u"></script>
+<script type="text/javascript" src="/sites/all/themes/canonical10/script.js?u"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutgoing": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip" } });
@@ -248,7 +248,6 @@ $(document).ready(function(){ $('#logo, #logos, #footer, .img_holder').pngFix();
 </li>
 <li id="menu-3542" class="menuparent menu-path-partners"><a href="/partners" title="">Partners</a><div class="bottom-holder">
 <ul><li id="menu-3544" class="menu-path-partners-isv"><a href="/partners/isv" title="">ISV programme</a></li>
-<li id="menu-3545" class="menu-path-partners-reseller"><a href="/partners/reseller" title="">Reseller programme</a></li>
 <li id="menu-3546" class="menu-path-partners-oem"><a href="/partners/oem" title="">OEM programme</a></li>
 <li id="menu-3547" class="menuparent menu-path-partners-become-a-partner"><a href="/partners/become-a-partner" title="">Become a partner</a><div class="bottom-holder">
 <ul><li id="menu-3557" class="menu-path-partners-become-a-partner-thank-you"><a href="/partners/become-a-partner/thank-you" title="This is the thank you page for the become a partner form">Thank you</a></li>
@@ -274,7 +273,7 @@ $(document).ready(function(){ $('#logo, #logos, #footer, .img_holder').pngFix();
  <input type="text" maxlength="255" name="keys" id="edit-keys" size="20" value="Type to search" onblur="if(this.value==''){this.value='Type to search';}" onfocus="if(this.value=='Type to search'){this.value=''}" class="form-text">
 </div>
 <input type="submit" name="op" id="edit-submit" value="Search" class="form-submit">
-<input type="hidden" name="form_build_id" id="form-8934ca4dfa772ecc9c6f10766c1cb9ee" value="form-8934ca4dfa772ecc9c6f10766c1cb9ee">
+<input type="hidden" name="form_build_id" id="form-1f10760f0ec0e42dc55900d8fe84097f" value="form-1f10760f0ec0e42dc55900d8fe84097f">
 <input type="hidden" name="form_id" id="edit-google-appliance-search-form" value="google_appliance_search_form">
 
 </div></form>
@@ -507,7 +506,6 @@ _utmz</td>
 
   <div class="content"><div class="menu-block-9 menu-name-menu-footer-links parent-mlid-3548 menu-level-1">
   <ul class="menu"><li class="leaf first menu-mlid-3550"><a href="/partners/isv" title="">ISV programme</a></li>
-<li class="leaf menu-mlid-3552"><a href="/partners/reseller" title="">Reseller programme</a></li>
 <li class="leaf menu-mlid-3551"><a href="/partners/oem" title="">OEM programme</a></li>
 <li class="leaf last menu-mlid-3549"><a href="/partners/become-a-partner" title="">Become A Partner</a></li>
 </ul></div>
@@ -516,7 +514,7 @@ _utmz</td>
 <div id="block-block-3" class="clear-block block block-block block-footer block-copyright grid-12">
 
 
-  <div class="content"><p>© 2012 Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd. <a href="/"><img src="/sites/default/themes/canonical10/images/footer_logo.png" alt=""></a></p>
+  <div class="content"><p>© 2013 Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd. <a href="/"><img src="/sites/default/themes/canonical10/images/footer_logo.png" alt=""></a></p>
 </div>
 </div>
 		      </div>
