--- a/a/af/afr/afreechat.com.html
+++ b/a/af/afr/afreechat.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the afreechat.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621145121id_/http%3A//afreechat.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the afreechat.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226053630id_/http%3A//afreechat.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 		<title>afreechat - Privacy Policy</title> 
@@ -28,8 +28,8 @@
 		<link rel="stylesheet" type="text/css" href="http://afreechat.com/style2.css?newest">
 		<link rel="canonical" href="http://afreechat.com/privacy/">
 		<link rel="image_src" href="http://afreechat.com/share.jpg">
-		<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
-		<script>
+		
+		<script async="" src="//www.google-analytics.com/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -148,7 +148,6 @@ function googleTranslateElementInit() {
 					<br>          
 <font face="verdana">
 <a href="http://afreechat.com/">Home</a> | 
-<a href="http://afreechat.com/contact-us/">Contact</a> | 
 <a href="http://afreechat.com/terms/">Terms</a> | 
 <a href="http://afreechat.com/privacy/">Privacy</a> | 
 <a href="http://afreechat.com/parents/">Parents</a> | 
@@ -167,27 +166,9 @@ function googleTranslateElementInit() {
 </center>
 		 
     </div>
-<script type="text/javascript">
-	var _sf_async_config={uid:14536,domain:"afreechat.com"};
-	(function(){
-  	function loadChartbeat() {
-    	window._sf_endpt=(new Date()).getTime();
-    	var e = document.createElement('script');
-    	e.setAttribute('language', 'javascript');
-    	e.setAttribute('type', 'text/javascript');
-    	e.setAttribute('src',
-       (("https:" == document.location.protocol) ? "https://a248.e.akamai.net/chartbeat.download.akamai.com/102508/" : "http://static.chartbeat.com/") +
-       "js/chartbeat.js");
-   	 document.body.appendChild(e);
-	  }
- 	 var oldonload = window.onload;
- 	 window.onload = (typeof window.onload != 'function') ?
-    	 loadChartbeat : function() { oldonload(); loadChartbeat(); };
-	})();
 
-	</script>
 
 	
 </div>
 	
-<script language="javascript" type="text/javascript" src="https://a248.e.akamai.net/chartbeat.download.akamai.com/102508/js/chartbeat.js"></script></body></html>
+</body></html>
