--- a/c/ch/cha/chative.com.html
+++ b/c/ch/cha/chative.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chative.com privacy policy that was archived on 2013-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130628085351id_/http%3A//chative.com/chat_privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chative.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226055841id_/http%3A//www.chative.com/chat_privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns:fb="http://www.facebook.com/2008/fbml"><head>
     <title>Video Chat Privacy Policy |Chat Online Privacy Policy</title>
