--- a/c/ca/car/carlsjr.com.html
+++ b/c/ca/car/carlsjr.com.html
@@ -1,49 +1,52 @@
-<!--The following is the downloaded HTML source of the carlsjr.com privacy policy that was archived on 2013-05-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130509072904id_/http%3A//www.carlsjr.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the carlsjr.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227065719id_/http%3A//www.carlsjr.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html :xmlns:fb="https://www.facebook.com/2008/fbml" :xmlns:og="http://ogp.me/ns#" lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
+<!DOCTYPE html><html :xmlns:fb="https://www.facebook.com/2008/fbml" :xmlns:og="http://ogp.me/ns#" lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta content="gs9u9ytDdDUn-BFDIhQ0AU6BmSpUyBc1swthiP9PimI" name="google-site-verification">
 <meta content="!" name="fragment">
 <!-- %meta{:content => "IE=EmulateIE7", "http-equiv" => "X-UA-Compatible"} -->
 <title>
 Carl’s Jr.®
-
+ | Privacy Policy
 </title>
 
-<link href="/stylesheets/application.css?1363901543" media="screen" rel="stylesheet" type="text/css">
+<link href="/stylesheets/application.css?1387506261" media="screen" rel="stylesheet" type="text/css">
 <!--[if IE 7]>
-<link href="/stylesheets/ie7.css?1363901534" media="screen" rel="stylesheet" type="text/css" />
+<link href="/stylesheets/ie7.css?1387506260" media="screen" rel="stylesheet" type="text/css" />
 <![endif]-->
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js" type="text/javascript"></script>
-<script src="/javascripts/swfobject.js?1363901468" type="text/javascript"></script>
-<script src="/javascripts/main.js?1363901468" type="text/javascript"></script>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+<script>
+  var $191 = $; // This saves the 1.9.1 version of jQuery into a global variable
+</script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js" type="text/javascript"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.6/jquery-ui.min.js" type="text/javascript"></script>
+<script src="/javascripts/swfobject.js?1387506242" type="text/javascript"></script>
+<script src="/javascripts/main.js?1387506242" type="text/javascript"></script>
 
-<link href="/stylesheets/privacyterms.css?1363901535" media="screen" rel="stylesheet" type="text/css">
+<link href="/stylesheets/privacyterms.css?1387506261" media="screen" rel="stylesheet" type="text/css">
 
-<link href="/favicon.ico?1339177526" rel="icon" type="image/ico">
-<script type="text/javascript">
-  //<![CDATA[
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-18859525-3']);
-    _gaq.push(['_setDomainName', '.carlsjr.com']);
-    _gaq.push(['_trackPageview']);
-    
-    (function() {
-    	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  //]]>
+<link href="/favicon.ico?1365782496" rel="icon" type="image/ico">
+<script>
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-18859525-3']);
+  _gaq.push(['_setDomainName', '.carlsjr.com']);
+  _gaq.push(['_trackPageview']);
+  
+  (function() {
+  	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
 </script>
 
 <script type="text/javascript">
 //<![CDATA[
-window.AUTH_TOKEN = '8ahkiz2oDIRDTg1nVNiJBpwN5zHRpamO0QrC8NxWZ9I=';
+window.AUTH_TOKEN = '6ViWETrjiNAyLgJUO8yWlnRZbtspF448ZgDbkooNedc=';
 //]]>
 </script>
 </head>
 <body>
+
 <div id="wrapper">
 <div id="toolbarbut">
 <span class="showbar">
@@ -113,18 +116,12 @@ window.AUTH_TOKEN = '8ahkiz2oDIRDTg1nVNiJBpwN5zHRpamO0QrC8NxWZ9I=';
 </div>
 <a href="http://www.carlsjr.com/menu/nutritional_calculator_landing" id="menu"></a>
 <a href="http://www.carlsjr.com/contact" id="contact"></a>
-<div id="search">
-<div id="search-form-container">
-  <form action="http://www.carlsjr.com/locations" method="post"><div style="margin:0;padding:0;display:inline"><input name="authenticity_token" type="hidden" value="8ahkiz2oDIRDTg1nVNiJBpwN5zHRpamO0QrC8NxWZ9I="></div>
-<input class="zipcode" id="search_restaurant_params" name="search[restaurant_params]" size="30" type="text" value="Enter a City, State or Zip">
-<input class="submit" id="search_submit" name="commit" type="submit" value="">
-  </form>
-</div>
-</div>
+<a href="http://www.carlsjr.com/locations" id="maps"></a>
+<a href="http://www.carlsjr.com/coupons" id="current_offers"></a>
 <a href="http://www.carlsjr.com/email_signup" id="signup"></a>
 <div class="top_grad_header"></div>
 <div id="star">
-<img alt="Star" src="/images/star.png?1363901468">
+<img alt="Star" src="/images/star.png?1387506242">
 </div>
 </div>
 
@@ -139,6 +136,7 @@ Privacy Policy
 <p>Certain non-personal information of visitors is recorded by the standard operation of Internet servers of Carl's Jr.  Information tracked includes the visitor's type of operating system (e.g., Macintosh, Windows) and the type of browser (e.g., Netscape, Internet Explorer).  This information is primarily used to provide an enhanced online experience for the visitor.  Other uses of this information include internal review of the number of visitors to the site, but only in an aggregate and non-personally identifiable form.</p>
 <p>E-mail addresses and other personally identifiable information of visitors, such as a first and last name, home or other physical address or telephone number, are known only when voluntarily submitted, for example, via registration for sweepstakes or contests, content submissions, suggestions or participation in online interactive activities.  Personally identifiable information may be shared by Carl's Jr. with its affiliates, including CKE Restaurants, Inc. and Carl Karcher Enterprises, Inc., with Carl's Jr. and Hardee's Food Systems, Inc.'s respective affiliates and franchisees, and with vendors that help access and manage the information (all of the foregoing are hereinafter referred to collectively as "authorized recipients"), but in all instances the information will be used only for the purposes enunciated in this policy.  Specifically, this information may be used: (1) to help Carl's Jr. better understand visitors' use of the site; (2) to respond to specific requests from visitors; (3) to provide notices to visitors, such as marketing information, discount coupons and new product offerings; and (4) to protect the security or integrity of the site.  Unless otherwise disclosed during the collection, this information will not be sold, transferred or otherwise disclosed to anyone other than authorized recipients, except where disclosure is required by law.</p>
 <p>To the extent that any of the sites accessible through this site has different practices, those different practices will be applicable at those sites.  Carl's Jr. is not responsible for the practices, policies or content applicable to these third party sites.  Inclusion of a link to another site does not imply endorsement by Carl's Jr.</p>
+<p>To provide you with a more relevant and interesting experience, we may participate in behavioral-based advertising. This means that Hardee's and/or a third party may place a cookie on your browser, or use a web beacon, to collect information about your use of our website so that Hardee's and/or a third party can provide advertising about products and services tailored to your interest (including, without limitation, products and services offered by Hardee's and its affiliates). Some of these third party companies may be participants in the Digital Advertising Alliance ("DAA"). The DAA offers a choice mechanism with respect to certain types of data collection and use. We adhere to the DAA's Self-Regulatory Principles for Online Behavioral Advertising. Visit <a href="http://www.aboutads.info/">www.aboutads.info</a> to exercise choice with respect to participants of the DAA. If you would like to opt-out from having the behavioral-based advertising companies with whom we have a relationship use your information for advertising purposes you can do so by visiting the <a href="http://www.networkadvertising.org/choices/">Network Advertising Initiative</a> or <a href="http://www.aboutads.info/choices/">Digital Advertising Alliance</a>. If you change computers, devices, or browsers, use multiple computers, devices, or browsers, or delete your cookies, you may need to repeat this process for each computer, device, or browser.</p>
 <h3>Use of Cookies</h3>
 <p>When you view this site, Carl's Jr. may temporarily store some information on your computer.  This information will be in the form of "cookies" and will help Carl's Jr. in many ways, but with strict restrictions on their use.  First, the cookies expire with the browser session so that the site cannot track your activities over time, and so that no permanent storage is used by these cookies.  Second, cookies are only used in order to provide convenience to you (for example, to reduce repetitive typing) and to allow Carl's Jr. to tailor the site to better match your interests and preferences.  They are not used to profile your activities or to gather unauthorized personal information.</p>
 <p>With most Internet browsers, you can erase cookies from your computer hard drive, block all cookies, or receive a warning before cookies are stored.  Please refer to your browser instructions or help screen to learn more about these functions.</p>
@@ -166,7 +164,7 @@ This policy is effective as of October 29, 2008.
 <div id="bottom">
 <div id="copyright">
 <div class="copyright_text">
-© 2013 Carl Karcher Enterprises, Inc. Featured products available at participating locations only.
+© 2013 Carl's Jr. Restaurants LLC Featured products available at participating locations only.
 </div>
 <div class="policy_terms">
 <div class="policy_text">
@@ -180,7 +178,7 @@ This policy is effective as of October 29, 2008.
 </div>
 </div>
 <div class="credit">
-<img alt="Creditcard" src="/images/creditcard.png?1363901468">
+<img alt="Creditcard" src="/images/creditcard.png?1387506242">
 </div>
 </div>
 <div id="site-links">
@@ -195,14 +193,18 @@ This policy is effective as of October 29, 2008.
 <a href="http://www.carlsjr.com/locations">Find a Carl's Jr.</a>
 </li>
 <li>
-<a href="http://assets.fbmta.com/clt/crljr/lp/join/join.asp?signupfrom=brandsite">Exclusive Offers and Emails</a>
+<a href="//assets.fbmta.com/clt/crljr/lp/join/join.asp?signupfrom=brandsite" target="_blank">Exclusive Offers and Emails</a>
 </li>
 <li>
 <a href="http://www.carlsjr.com/jobs">Jobs</a>
 </li>
+<li>
+<a href="/?force_mobile=true">View Mobile Site</a>
+</li>
 </ul>
 </div>
 </div>
+
 
 
 </body></html>
