--- a/i/io/ior/iorbix.com.html
+++ b/i/io/ior/iorbix.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the iorbix.com privacy policy that was archived on 2013-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130628073123id_/http%3A//iorbix.com/network-privacy.php%3Ftab%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iorbix.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227084821id_/http%3A//iorbix.com/network-privacy.php%3Ftab%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
 
 <title>Privacy and Terms | iOrbix</title>
 
-<link type="text/css" rel="stylesheet" href="/social/library-common-fonts.css?i=1371231961"><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=181138015871"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript">//<![CDATA[
+<link type="text/css" rel="stylesheet" href="/social/library-common-fonts.css?i=1385872618"><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=181138015871"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript">//<![CDATA[
 document.domain = "iorbix.com";
 (function(loc){loc.href.replace(/^(?:(?:[^:\/?#]+):)?(?:\/\/(?:[^\/?#]*))?([^?#]*)(?:\?([^#]*))?(?:#(?:!|%21)(.*))?/,function(all, path, query, frag){if(!frag||(frag==''))return;window.location.replace('/'+frag);});})(window.location);
 if(top.location!=self.location)top.location.href=self.location.href;
@@ -48,7 +48,7 @@ document.hasFocusC=false;if(!document.hasFocus){document.hasFocus=function(){ret
 <link rel="http://oexchange.org/spec/0.8/rel/related-target" type="application/xrd+xml" href="http://iorbix.com/oexchange.xrd">
 <link rel="apple-touch-icon" href="http://pubimages.iorbix.com/iOrbix-iPhone.png">
 <link rel="image_src" href="http://pubimages.iorbix.com/Logo-Square-Icon-100.jpg">
-<link type="text/css" rel="stylesheet" href="/social/library-common-style-1371231961.css"><link type="text/css" rel="stylesheet" href="/social/library-common-thsunrise.css?i=1371231961">
+<link type="text/css" rel="stylesheet" href="/social/library-common-style-1385872618.css"><link type="text/css" rel="stylesheet" href="/social/library-common-thsunrise.css?i=1385872618">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <!-- <script type="text/javascript">jQuery.uiBackCompat = false;</script> -->
@@ -63,7 +63,7 @@ server['external'] = false;
 server['avawars'] = false;
 server['topmodel'] = false;
 server['ajax'] = true;
-server['version'] = "1371231961";
+server['version'] = "1385872618";
 server['indexes'] = ["index.php"];
 server['custom_fonts'] = false;
 
@@ -74,7 +74,7 @@ ocred['photo'] = "http://images.iorbix.com/No-Photo.jpg";
 ocred['realname'] = "Surfer";
 ocred['nickname'] = "Surfer";
 ocred['seo'] = "Surfer";
-ocred['token'] = "85a697f24e11affdd265cb81a0421fab";
+ocred['token'] = "b67c85f924046bbc8c0c51b88964c8fa";
 ocred['country'] = "0";
 ocred['loggedout'] = true;
 ocred['color_balloon'] = null;
@@ -237,9 +237,9 @@ googletag.enableServices();
 
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
-<script type="text/javascript" src="/social/library-common-frameworks-1371231961.js"></script>
-<script type="text/javascript" src="/social/library-common-scripts-1371231961.js"></script>
-<!--[if IE 6]><script type="text/javascript" src="/social/library-common-scripts-ie6-1371231961.js"></script><![endif]-->
+<script type="text/javascript" src="/social/library-common-frameworks-1385872618.js"></script>
+<script type="text/javascript" src="/social/library-common-scripts-1385872618.js"></script>
+<!--[if IE 6]><script type="text/javascript" src="/social/library-common-scripts-ie6-1385872618.js"></script><![endif]-->
 
 <script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
 
@@ -289,7 +289,7 @@ googletag.enableServices();
 	</div>
 	<a href="index.php" title="iOrbix"><img id="iorbix-logo" src="http://images.iorbix.com/blank.gif" alt="iOrbix"></a>
 	<span id="iorbix-featuregift"></span>
-	
+<div id="iorbix-christmas"><a onclick="enableChristmas();"><img style="background-position: 0 0; width: 237px;" src="http://images.iorbix.com/blank.gif" alt=""></a></div>	
 	<div id="iorbix-header-tools">
 		<div class="clear"><!-- --></div>
 	</div>
@@ -363,6 +363,7 @@ googletag.enableServices();
 		<div class="iorbix-nav-ssep float_left"><!-- --></div><div class="iorbix-nav-stab-link float_left"><div class="iorbix-nav-stab-l float_left"><img src="http://images.iorbix.com/blank.gif" alt=""></div><div class="iorbix-nav-stab-a float_left"><a href="community-questions.php">Questions</a></div><div class="iorbix-nav-stab-r float_left"><img src="http://images.iorbix.com/blank.gif" alt=""></div></div>
 		<div class="iorbix-nav-ssep float_left"><!-- --></div><div class="iorbix-nav-stab-link float_left"><div class="iorbix-nav-stab-l float_left"><img src="http://images.iorbix.com/blank.gif" alt=""></div><div class="iorbix-nav-stab-a float_left"><a href="homepage-notebook.php">Notebook</a></div><div class="iorbix-nav-stab-r float_left"><img src="http://images.iorbix.com/blank.gif" alt=""></div></div>
 		<div class="iorbix-nav-ssep float_left"><!-- --></div><div class="iorbix-nav-stab-link float_left"><div class="iorbix-nav-stab-l float_left"><img src="http://images.iorbix.com/blank.gif" alt=""></div><div class="iorbix-nav-stab-a float_left"><a href="homepage-quest.php">iOrbix Quest</a></div><div class="iorbix-nav-stab-r float_left"><img src="http://images.iorbix.com/blank.gif" alt=""></div></div>
+		<div class="iorbix-nav-ssep float_left"><!-- --></div><div class="iorbix-nav-stab-link float_left"><div class="iorbix-nav-stab-l float_left"><img src="http://images.iorbix.com/blank.gif" alt=""></div><div class="iorbix-nav-stab-a float_left"><a href="http://facebookcovers.iorbix.com/" target="_blank">Facebook Covers</a></div><div class="iorbix-nav-stab-r float_left"><img src="http://images.iorbix.com/blank.gif" alt=""></div></div>
 <div class="iorbix-nav-ssep float_left"><!-- --></div><div class="iorbix-nav-stab-l float_left"><img src="http://images.iorbix.com/blank.gif" alt=""></div>		<div class="clear"><!-- --></div>
 		</div>
 		<div id="tab-profile" class="iorbix-nav-stab wrap_false" style="display: none;">
@@ -459,11 +460,11 @@ googletag.enableServices();
 <a href="network-privacy.php">Privacy and Terms</a>
 </div>
 <div class="clear space"><!-- --></div><div class="sidebar-nav float_left sidebar-scroll"><div style="overflow: hidden; text-align: center;"><div class="igoog" style="margin-left: auto; margin-right: auto; overflow: hidden; width: 160px; height: 600px; position: relative;"><!-- iorbix-about-160x600 -->
-<div id="div-gpt-ad-1347547103348-0" style="width: 160px; height: 600px;">
+<div id="div-gpt-ad-1347547103349-0" style="width: 160px; height: 600px;">
 </div>
 <script type="text/javascript">
 googletag.cmd.push(function() {
-googletag.display("div-gpt-ad-1347547103348-0");
+googletag.display("div-gpt-ad-1347547103349-0");
 });
 </script>
 </div></div>&nbsp;</div><div class="content-right-side float_left"><div class="content-right-in"><div class="text-balloon-text"><div class="text-balloon-header"><!-- --></div><div class="text-balloon-body float_left"><div class="text-balloon-body-in"><div class="io-title-balloon-out"><span class="io-title-balloon">Privacy Policy</span></div>
@@ -548,7 +549,7 @@ If there are any questions regarding this privacy policy you may email us to <sp
 <script type="text/javascript">$jq(function(){print_mail('support', 'iorbix.com', 'printmail');});</script>
 </div></div><script type="text/javascript">
 googletag.cmd.push(function() {
-	googletag.pubads().refresh([commonGoogleAds["1003307:about:160x600"]]);
+	googletag.pubads().refresh([commonGoogleAds["23321717:about:160x600"]]);
 });
 </script>
 
@@ -568,6 +569,7 @@ googletag.cmd.push(function() {
 				<a href="network-overview.php">What is iOrbix</a><br>
 				<a href="network-aboutus.php">The Company</a><br>
 				<a href="network-collaborators.php">Collaborators</a><br>
+				<a href="http://facebookcovers.iorbix.com/" target="_blank">Facebook Covers</a><br>
 			</div>
 		</div>
 		<div class="iorbix-footer-container float_left">
@@ -583,7 +585,7 @@ googletag.cmd.push(function() {
 			<div class="iorbix-footer-links">
 				<a href="network-contact.php">Contact Staff</a><br>
 				<a href="network-contact.php">Report Abuse</a><br>
-				<a href="community-forum.php?fid=16834141937&amp;name=iOrbix-Global-Forum">Give your Suggestion</a>
+				<a href="community-forum.php?fid=16834141937&amp;name=iOrbix-Global-Forum">Give your Suggestion</a><br>
 			</div>
 		</div>
 		<div class="iorbix-footer-container float_left">
@@ -591,14 +593,15 @@ googletag.cmd.push(function() {
 			<div class="iorbix-footer-links">
 				<a href="network-press.php">What Others Say</a><br>
 				<a href="network-logos.php">Talk About Us</a><br>
-				<a href="network-share.php">Share a Link</a>
+				<a href="network-share.php">Share a Link</a><br>
 			</div>
 		</div>
 		<div class="iorbix-footer-container float_left">
 			<div class="iorbix-footer-title"><a onclick="void(0);">Jobs</a></div>
 			<div class="iorbix-footer-links">
 				<a href="language.php">Translate iOrbix</a><br>
-				<a href="profile-skins.php">Design Profile Skins</a>
+				<a href="profile-skins.php">Design Profile Skins</a><br>
+				<a href="http://facebookcovers.iorbix.com/facebook-cover-designer" target="_blank">Facebook Cover Designer</a><br>
 			</div>
 		</div>
 		<div class="iorbix-footer-container float_left">
@@ -638,7 +641,7 @@ googletag.cmd.push(function() {
 
 <form id="quickmenu-login" action="process-homepage-login.php" method="post">
 <input type="hidden" name="cmd" value="login">
-<input type="hidden" name="tok" value="85a697f24e11affdd265cb81a0421fab">
+<input type="hidden" name="tok" value="b67c85f924046bbc8c0c51b88964c8fa">
 <input type="hidden" name="noajax" value="1">
 <input type="hidden" name="rememberme" value="on"><div class="float_left" id="quickmenu-login-div1"><div class="register-ifield register-ifield-static" style="width: 160px;"><div class="register-ifield-left"><!-- --></div><div class="register-ifield-center"><input id="quickmenu-login-email" class="register-input register-input-dark" type="text" name="email" value=""><span id="quickmenu-login-email-span">Email</span></div><div class="register-ifield-right"><!-- --></div></div></div><div class="float_left" id="quickmenu-login-div2"><div class="register-ifield register-ifield-static" style="width: 160px;"><div class="register-ifield-left"><!-- --></div><div class="register-ifield-center"><input id="quickmenu-login-password" class="register-input register-input-dark" type="password" name="password" value=""><span id="quickmenu-login-password-span">Password</span></div><div class="register-ifield-right"><!-- --></div></div></div>
 <div class="float_left quickmenu-button" id="quickmenu-login-div3">
